Kapitel3: Unterkapitel verwendete Technologien und Protokolle fertig

--- a/cvl_tr.bib
+++ b/cvl_tr.bib
@@ -26,6 +26,15 @@
   timestamp = {2008.06.13}
 }
 
+@OTHER{html,
+  author = {W3C},
+  title = {W3C Candidate Recommendation},
+  year = {2014},
+  month = {Jul},
+  howpublished = {\url{http://www.w3.org/TR/2014/CR-html5-20140731/}},
+  timestamp = {2014.08.25}
+}
+
 @BOOK{pacs,
   AUTHOR = "Dr. H. K. Huang",
   TITLE = "PACS and Imaging Informatics",
@@ -35,13 +44,36 @@
   ADDRESS = "Wiley-Blackwell"
 }
 
-
 @OTHER{osirix,
   author = {Antoine Rosset},
   title = {Osirix - DICOM Viewer},
   month = {Sept},
   year = {2014},
   howpublished = {\url{http://www.osirix-viewer.com/}}
+}
+
+@OTHER{http,
+  author = {Network Working Group},
+  title = {Hypertext Transfer Protocol -- HTTP/1.1},
+  month = {Jun},
+  year = {1999},
+  howpublished = {\url{https://www.ietf.org/rfc/rfc2616.txt}}
+}
+
+@BOOK{rest,
+  AUTHOR = "Stefan Tilkov",
+  TITLE = "REST und HTTP : Einsatz der Architektur des Web für Integrationsszenarien",
+  PUBLISHER = "Heidelberg : dpunkt-Verlag",
+  YEAR = "2009"
+}
+
+@BOOK{ajax,
+  AUTHOR = "Johannes Gamperl",
+  TITLE = "AJAX : Web 2.0 in der Praxis",
+  PUBLISHER = "Galileo Press",
+  YEAR = "2006",
+  month = {Mar},
+  ADDRESS = "Bonn"
 }
 
 
@@ -88,15 +120,6 @@
   timestamp = {2014.08.25}
 }
 
-@OTHER{html-14,
-  author = {W3C},
-  title = {W3C Candidate Recommendation},
-  year = {2014},
-  month = {Jul},
-  howpublished = {\url{http://www.w3.org/TR/2014/CR-html5-20140731/}},
-  timestamp = {2014.08.25}
-}
-
 @OTHER{webgl-14,
   author = {Khronos Group},
   title = {WebGL - OpenGL ES 2.0 for the Web},
@@ -105,4 +128,11 @@
   timestamp = {2014.08.28}
 }
 
+@OTHER{pixijs,
+  author = {Goodboy Digital Ltd.},
+  title = {Pixi.js - 2D webGL renderer with canvas fallback},
+  year = {2014},
+  howpublished = {\url{http://www.pixijs.com/}},
+  timestamp = {2014.09.17}
+}
 
